[gd_scene load_steps=9 format=3 uid="uid://car1jrnyujohg"]

[ext_resource type="Texture2D" uid="uid://px17kflnvnd7" path="res://Assets/Icons/NodesIcons/Arrow01.svg" id="1_hcw8y"]
[ext_resource type="Texture2D" uid="uid://bexlgpgwakbrr" path="res://Assets/Icons/NodesIcons/Arrow02.svg" id="2_1fmpm"]
[ext_resource type="Script" path="res://Scripts/GraphNodes/BackgroundNode.gd" id="3_ibi0o"]
[ext_resource type="StyleBox" uid="uid://bmb6fo20hn20m" path="res://Assets/NodeValue.stylebox" id="4_2w5ax"]

[sub_resource type="Theme" id="Theme_llmqa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bcq14"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.129412, 0.14902, 0.180392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2f44r"]
content_margin_left = 10.0
content_margin_top = 2.0
content_margin_right = 10.0
content_margin_bottom = 2.0
bg_color = Color(0.337255, 0.631373, 0.788235, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="LabelSettings" id="LabelSettings_v4ya3"]
font_color = Color(0.572549, 0.572549, 0.572549, 1)

[node name="BackgroundNode" type="GraphNode" groups=["graph_nodes"]]
offset_right = 241.0
offset_bottom = 82.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_default_cursor_shape = 2
theme = SubResource("Theme_llmqa")
theme_override_styles/panel = SubResource("StyleBoxFlat_bcq14")
theme_override_styles/titlebar = SubResource("StyleBoxFlat_2f44r")
title = "BackgroundNode"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = ExtResource("1_hcw8y")
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = ExtResource("2_1fmpm")
slot/0/draw_stylebox = false
script = ExtResource("3_ibi0o")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
mouse_filter = 2

[node name="BgLabel" type="Label" parent="MarginContainer/VBox/HBox"]
layout_mode = 2
text = "Set background to"

[node name="PathLabel" type="Label" parent="MarginContainer/VBox/HBox"]
layout_mode = 2
theme_override_styles/normal = ExtResource("4_2w5ax")
text = "nothing"
label_settings = SubResource("LabelSettings_v4ya3")

[node name="PreviewRect" type="TextureRect" parent="MarginContainer/VBox"]
visible = false
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
expand_mode = 1
stretch_mode = 6
